        8.4 (crash on initialization) resolved.  (Notice that binaries
        may still require an older Tcl/Tk, for example on Windows).

    o   type.convert() was not getting the levels right if passed a
	character vector containing <NA>s, and `na.strings' did not
	contain "NA".  This affected read.table().

    o   Internal match function did not check for nor handle 0-length
	vectors.  (The R function match() did.)

    o   The line length limit in output text connections has been
	raised to 8095 chars.



		CHANGES IN R VERSION 1.6.1


NEW FEATURES

    o	Added a few "trivial and obviously missing" functions to tcltk:
	tkchooseDirectory, tkpopup, tkdialog, tkread

    o	barplot() has a new argument `axis.lty', which if set to 1
	allows the pre-1.6.0 behaviour of plotting the axis and tick
	marks for the categorical axis.	 (This was apparently not
	intentional, but axis() used to ignore lty=0.)
	The argument `border' is no longer ".NotYetUsed".


BUG FIXES

    o	hist(<datetime>, cex.axis = f)	now works for x-axis too.

    o	prompt() gave wrong \usage{.} for long argument default expressions.

    o	summary(x) gives more information when `x' is a logical
	(or a data frame with a logical column which is now quite customary).

    o	seq.POSIXt(from, to, length.out= . ) could give too long results

    o	summaryRprof() was counting nested calls to the same function
	twice.

    o	Printing of objects of mode "expression" did strange things if
	there were "%" characters in the deparsed expression (PR#2120).

    o	as.matrix.data.frame converted missings to "NA" not character NA.
	(PR#2130)

    o	spec.pgram() was only interpolating zero freq for one series. (PR#2123)

    o	help(randu) had % unescaped in the example. (PR#2141)

    o	Making html links would fail if packages-head.html was not
	writeable. (PR#2133)

    o	Sweave.sty was not installed to $R_HOME/share/texmf when
	builddir != srcdir. On Windows backslashes in latex paths have